# pyudev-stubs

./: README.md  pyproject.toml  pyrightconfig.json
src/pyudev/: __init__.pyi  _errors.pyi  core.pyi  discover.pyi
src/pyudev/device/: __init__.pyi
stubs/pyudev/: __init__.py  __init__.pyi  _errors.py  _util.pyi  monitor.pyi  version.pyi
stubs/pyudev/device/: _device.pyi
