[project]
name = "pyudev-stubs"
version = "0.1.2"
description = "pyudev stubs"
authors = [
    {name = "Maria Sorokina", email = "ruafelianna@ya.ru"},
]
dependencies = []
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
build.includes = [
    "src",
]
